register, login demas

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,2 @@
-SQLALCHEMY_DATABASE_URI = mysql+pymysql://root:@localhost/efi.db
-SECRET_KEY= alejandro123
+SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:@localhost/dbEFI_PS
+SECRET_KEY=prueba123
